# vkproj

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.txt  build.sh  imgui.ini  mingw-clang-toolchain.cmake  mingw-gcc-toolchain.cmake
src/: main.cpp  sdl_test.cpp
src/renderer/: CMakeLists.txt  vk_constants.hpp  vk_deletionManager.cpp  vk_deletionManager.hpp  vk_include.hpp  vk_renderer.cpp  vk_renderer.hpp  vx_deletionManager.cpp  vx_descriptors.cpp  vx_descriptors.hpp  vx_image.cpp  vx_image.hpp  vx_pipeline.cpp  vx_pipeline.hpp  vx_renderer.cpp  vx_renderer.hpp  vx_utils.hpp
src/renderer/shaders/: CMakeLists.txt  color_gradient.comp  color_gradient.comp.spv  colored_triangle.frag  colored_triangle.vert  gradient.comp  gradient.comp.spv  sky.comp
